migrate from constructor injection to inject function