@@ -28,6 +28,7 @@ import com.kipcollo.user.UserService;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -97,7 +98,7 @@ public class SecurityConfig {
       final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
       final CorsConfiguration config = new CorsConfiguration();
       config.setAllowCredentials(true);
-      config.setAllowedOrigins(Collections.singletonList("http://localhost:4200"));
+      config.setAllowedOrigins(List.of("http://localhost:4200","http://localhost"));
       config.setAllowedHeaders(Arrays.asList(HttpHeaders.ORIGIN,HttpHeaders.CONTENT_TYPE,HttpHeaders.ACCEPT,HttpHeaders.AUTHORIZATION));
       config.setAllowedMethods(Arrays.asList("GET","POST","DELETE","PUT","PATCH"));
       source.registerCorsConfiguration("/**", config);
